--- a/frontend/views/customerbox.html
+++ b/frontend/views/customerbox.html
@@ -1,5 +1,5 @@
-<div class="col-lg-4">
-    <div class="contact-box" ng-click='editCustomer()'>
+<div class="col-lg-12">
+    <div class="contact-box">
         <a ui-sref="profile">            
             <div class="col-sm-12">
                 <h3><strong>{{ customer.name }}</strong></h3>
