--- a/frontend/views/customerbox.html
+++ b/frontend/views/customerbox.html
@@ -1,16 +1,26 @@
 <div class="col-lg-12">
     <div class="contact-box">
-        <a ui-sref="profile">            
-            <div class="col-sm-12">
-                <h3><strong>{{ customer.name }}</strong></h3>
-
-                <p><i class="fa fa-map-marker"></i> {{ customer.street }} {{ customer.zip }} {{ customer.city }}</p>
-                <p>                    
-                    <i class="fa fa-phone"></i> {{ customer.phone }}
-                </p>
-                <p><i class="fa fa-at"></i> {{ customer.email }}</p>
+        <a ui-sref="profile">
+            <div class="row">     
+                <div class="col-sm-12">
+                    <h3><strong>{{ customer.name }}</strong></h3>
+    
+                    <p><i class="fa fa-map-marker"></i> {{ customer.street }} {{ customer.zip }} {{ customer.city }}</p>
+                    <p>                    
+                        <i class="fa fa-phone"></i> {{ customer.phone }}
+                    </p>
+                    <p><i class="fa fa-at"></i> {{ customer.email }}</p>
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <button type="button" class="btn btn-white" ng-click="modal.editCustomer()">Aanpassen</button>
+                    <button type="button" class="btn btn-white" ng-click="modal.deleteCustomer()">Verwijderen</button>
+                </div>
             </div>
             <div class="clearfix"></div>
+            
         </a>
     </div>
 </div>
