--- a/frontend/views/customerbox.html
+++ b/frontend/views/customerbox.html
@@ -10,17 +10,15 @@
                         <i class="fa fa-phone"></i> {{ customer.phone }}
                     </p>
                     <p><i class="fa fa-at"></i> {{ customer.email }}</p>
-                    
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <button type="button" class="btn btn-white" ng-click="modal.editCustomer()">Aanpassen</button>
-                    <button type="button" class="btn btn-white" ng-click="modal.deleteCustomer()">Verwijderen</button>
+                    <button type="button" class="btn btn-white" ng-click="modal.vm.editCustomer()">Aanpassen</button>
+                    <button type="button" class="btn btn-white" ng-click="modal.deleteCustomer(c)">Verwijderen</button>
                 </div>
             </div>
-            <div class="clearfix"></div>
-            
+            <div class="clearfix"></div>            
         </a>
     </div>
 </div>
