--- a/frontend/views/customers.html
+++ b/frontend/views/customers.html
@@ -12,6 +12,6 @@
 		</div>
     </div>        
     <div class="row">
-        <customer-box ng-repeat="c in customers" customer='c' ng-click="cust.editCustomer(c)"></customer-box>
+        <customer-box ng-repeat="c in customers" customer='c'></customer-box>
     </div>
 </div>
