--- a/frontend/views/customerbox.html
+++ b/frontend/views/customerbox.html
@@ -14,7 +14,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <button type="button" class="btn btn-white" ng-click="modal.vm.editCustomer()">Aanpassen</button>
+                    <button type="button" class="btn btn-white" ng-click="vm.editCustomer()">Aanpassen</button>
                     <button type="button" class="btn btn-white" ng-click="modal.deleteCustomer(c)">Verwijderen</button>
                 </div>
             </div>
