--- a/frontend/js/components/customer/deleteCustomerView.html
+++ b/frontend/js/components/customer/deleteCustomerView.html
@@ -6,7 +6,7 @@
         Bent u zeker dat u <strong>{{ modal.vm.customer.name }}</strong> wilt verwijderen?
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white" ng-click="modal.cancel()">Sluiten</button>
-        <button type="button" class="btn btn-primary" ng-click="modal.ok()">Opslaan</button>
+        <button type="button" class="btn btn-white" ng-click="modal.cancel()">Annuleren</button>
+        <button type="button" class="btn btn-primary" ng-click="modal.ok()">OK</button>
     </div>
 </div>
