--- a/frontend/views/customers.html
+++ b/frontend/views/customers.html
@@ -1,4 +1,4 @@
-<div class="wrapper wrapper-content animated fadeInRight" ng-controller="CustomersController as cust" >       
+<div class="wrapper wrapper-content animated fadeInRight" ng-controller="CustomersController as cust"> 
     <div class="ibox-content m-b-sm border-bottom">
         <div class="row m-b-sm m-t-sm">					
 			<div class="col-md-10">
@@ -12,6 +12,6 @@
 		</div>
     </div>        
     <div class="row">
-        <customer-box ng-repeat="c in customers" customer='c'></customer-box>
+        <customer-box ng-repeat="c in data.customers" customer='c'></customer-box>
     </div>
 </div>
