--- a/frontend/js/components/project/deleteProjectView.html
+++ b/frontend/js/components/project/deleteProjectView.html
@@ -3,7 +3,7 @@
         <h4 class="modal-title">{{ modal.vm.title }}</h4>        
     </div>
     <div class="modal-body">        
-        Bent u zeker dat u <strong>{{ modal.vm.project.name }}</strong> wilt verwijderen?
+        Bent u zeker dat u het project <strong>{{ modal.vm.project.title }}</strong> wilt verwijderen?
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white" ng-click="modal.cancel()">Annuleren</button>
