--- a/frontend/views/common/navigation.html
+++ b/frontend/views/common/navigation.html
@@ -28,9 +28,9 @@
             <li ui-sref-active="active">
                 <a ui-sref="index.invoices"><i class="fa fa-file-o"></i> <span class="nav-label">Facturen</span></a>
             </li>
-            <li ui-sref-active="active">
+            <!--<li ui-sref-active="active">
                 <a ui-sref="index.timeregistration"><i class="fa fa-clock-o"></i> <span class="nav-label">Tijdregistratie</span></a>
-            </li>
+            </li>-->
             <li ui-sref-active="active">
                 <a ui-sref="index.settings"><i class="fa fa-cogs"></i> <span class="nav-label">Instellingen</span></a>
             </li>            
