--- a/frontend/views/projectbox.html
+++ b/frontend/views/projectbox.html
@@ -8,6 +8,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
+                    <button type="button" class="btn btn-white" ng-click="vm.convertProjectToInvoice()">Factureren</button>
                     <button type="button" class="btn btn-white" ng-click="vm.editProject()">Aanpassen</button>
                     <button type="button" class="btn btn-white" ng-click="vm.deleteProject()">Verwijderen</button>
                 </div>
